
# Process this file with autoconf to produce a configure script.
AC_INIT(bufdump.tcl)

#    Separate device libraries.

AM_INIT_AUTOMAKE(bufdump, 1.1)  


AC_MSG_CHECKING([operating system ])

AC_CANONICAL_HOST


# Checks for programs.


AC_PROG_INSTALL
AC_PROG_LN_S
AC_PATH_PROG(HCDOCBOOK,   docbook2dvi,  echo)
AC_PATH_PROG(HTMLDOCBOOK, docbook2html, echo)
AC_PATH_PROG(DVIPDF,      dvipdf,       echo)
AC_PATH_PROG(MANDOCBOOK,  xmlto,        echo)
AC_PATH_PROG(WGET,        wget,         echo)
AC_PATH_PROG(ECHO,        echo,         echo)

case  "$host" in 
      i686-pc-linux-gnu)
	SDXRUNTIME=./kit-linux-x86-MTall.bin
	chmod a+rx $SDXRUNTIME
      ;;
      *)
	AC_MSG_WARN([We can only run all aspects of make on linux])
	SDXRUNTIME=$ECHO
      ;;
esac  


#
# Makefile substitutions:

AC_SUBST(HCDOCBOOK)
AC_SUBST(DVIPDF)
AC_SUBST(MANDOCBOOK)
AC_SUBST(HTMLDOCBOOK)
AC_SUBST(WGET)
AC_SUBST(SDXRUNTIME)

#  Create output files:

AC_OUTPUT(Makefile)